--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "repository": "https://github.com/SamuelePassiatore/exam_masterz_solanabootcamp.git",
   "author": "SamuelePassiatore <semmisno2@protonmail.com>",
   "license": "MIT",
-"scripts": {
-   "keygen": "ts-node ./keygen.ts",
-   "airdrop": "ts-node ./airdrop.ts"
-},
+  "scripts": {
+    "keygen": "ts-node ./keygen.ts",
+    "airdrop": "ts-node ./airdrop.ts",
+    "transfer": "ts-node ./transfer.ts"
+  },
   "dependencies": {
     "@solana/web3.js": "^1.92.3",
     "@types/node": "^20.14.2",
